Bug 325377 - pintxo plugin fails to build
Summary: pintxo plugin fails to build
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: 0.6.80
Platform: unspecified Linux
: NOR normal
Target Milestone: 0.7.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-28 00:11 UTC by Hrvoje Senjan
Modified: 2013-10-29 09:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2013-09-28 00:11:29 UTC
0.6.80/plugins/pintxo/modem-combobox.cpp
[  302s] /home/abuild/rpmbuild/BUILD/ktp-accounts-kcm-0.6.80/plugins/pintxo/modem-combobox.cpp: In constructor 'ModemComboBox::ModemComboBox(QWidget*)':
[  302s] /home/abuild/rpmbuild/BUILD/ktp-accounts-kcm-0.6.80/plugins/pintxo/modem-combobox.cpp:36:45: error: 'class ModemManager::ModemGsmCardInterface' has no member named 'getSimIdentifier'
[  302s]                  QString simIdent = simCard->getSimIdentifier();
[  302s]                                              ^
[  302s] /home/abuild/rpmbuild/BUILD/ktp-accounts-kcm-0.6.80/plugins/pintxo/modem-combobox.cpp:37:53: error: 'class ModemManager::ModemGsmCardInterface' has no member named 'getSpn'
[  302s]                  QDBusReply<QString> spn  = simCard->getSpn();
[  302s]                                                      ^
[  302s] /home/abuild/rpmbuild/BUILD/ktp-accounts-kcm-0.6.80/plugins/pintxo/modem-combobox.cpp: In member function 'QString ModemComboBox::selectedSimIdentifier()':
[  302s] /home/abuild/rpmbuild/BUILD/ktp-accounts-kcm-0.6.80/plugins/pintxo/modem-combobox.cpp:54:29: error: 'class ModemManager::ModemGsmCardInterface' has no member named 'getSimIdentifier'
[  302s]              return simCard->getSimIdentifier();
[  302s]                              ^
[  302s] /home/abuild/rpmbuild/BUILD/ktp-accounts-kcm-0.6.80/plugins/pintxo/modem-combobox.cpp: In member function 'void ModemComboBox::setSelectedModem(const QString&)':
[  302s] /home/abuild/rpmbuild/BUILD/ktp-accounts-kcm-0.6.80/plugins/pintxo/modem-combobox.cpp:67:45: error: 'class ModemManager::ModemGsmCardInterface' has no member named 'getSimIdentifier'
[  302s]                  QString simIdent = simCard->getSimIdentifier();
[  302s]                                              ^
[  302s] make[2]: *** [plugins/pintxo/CMakeFiles/ktpaccountskcm_plugin_pintxo.dir/modem-combobox.o] Error 1
[  302s] make[2]: Leaving directory `/home/abuild/rpmbuild/BUILD/ktp-accounts-kcm-0.6.80/build'
[  302s] make[1]: *** [plugins/pintxo/CMakeFiles/ktpaccountskcm_plugin_pintxo.dir/all] Error 2
[  302s] make[1]: *** Waiting for unfinished jobs....

Reproducible: Always




ktp-accounts-kcm  is at exactly  0.6.80
ModemManagerQt is at exactly 0.5.1

[  146s] -- checking for module 'ModemManagerQt>=0.5.1'
[  146s] --   found ModemManagerQt, version 0.5.1

haven't tested latest git, but in that case, required version should be bumped...
Comment 1 Cruz Enrique 2013-10-04 09:30:53 UTC
I have the same issue in gentoo (ussing kde-overlay)
Comment 2 David Edmundson 2013-10-06 22:52:54 UTC
https://git.reviewboard.kde.org/r/112472/ fixed here
Comment 4 Antonio Rojas 2013-10-29 09:09:26 UTC
Is this fix included in 0.7? I'm getting the same error
Comment 5 David Edmundson 2013-10-29 09:18:18 UTC
Git commit 951a583ca1b00b4eea05fb95ff4ed5995e030f49 by David Edmundson, on behalf of Anant Kamath.
Committed on 06/10/2013 at 22:45.
Pushed by davidedmundson into branch 'kde-telepathy-0.7'.

Fixed to use ModemManagerQt 0.5.1 API correctly

M  +4    -4    plugins/pintxo/modem-combobox.cpp

http://commits.kde.org/telepathy-accounts-kcm/951a583ca1b00b4eea05fb95ff4ed5995e030f49