Fixed to use ModemManagerQt 0.5.1 API correctly

BUG: 325377